--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,6 +6,10 @@
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
   </view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
