--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,6 +10,9 @@
     <view>你哈达发；案例库</view>
     <view>你哈达发；案例库</view>
     <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
   </view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
