代码更新啊

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -13,6 +13,10 @@
     <view>你哈达发；案例库</view>
     <view>你哈达发；案例库</view>
     <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
+    <view>你哈达发；案例库</view>
   </view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
